Implement run configs for NeoForge 1.21.1